--- a/SalesWebMcv/appsettings.json
+++ b/SalesWebMcv/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=localhost\\SQLEXPRESS;Database=SisControlAzure;User Id=sa;Password=BSG1998@g;TrustServerCertificate=True;"
+  }
 }
